# rook

./: .gitignore  .gitmodules  CHANGELOG.md  flake.nix  meson.build  plan.md  release-please-config.json  test_mcp.py
.github/: dependabot.yml
data/: io.github.fleischerdesign.Rook.desktop.in  io.github.fleischerdesign.Rook.gschema.xml  meson.build  rook.sh
libs/rook-core/: meson.build  rook_config.h.in
libs/rook-core/include/rook/adapters/: secret_store.hpp
libs/rook-core/include/rook/adapters/audio/: miniaudio_adapter.hpp  model_downloader.hpp  openwakeword_adapter.hpp  piper_adapter.hpp  sherpa_adapter.hpp  sherpa_asr_adapter.hpp  sherpa_tts_adapter.hpp  sherpa_wakeword_adapter.hpp  whisper_adapter.hpp
libs/rook-core/include/rook/adapters/builtin/: builtin_tool_port.hpp
libs/rook-core/include/rook/adapters/client/: grpc_client_extension_port.hpp  grpc_client_llm_port.hpp  grpc_client_store_port.hpp
libs/rook-core/include/rook/adapters/composite/: composite_tool_port.hpp
libs/rook-core/include/rook/adapters/extension/: extension_manager.hpp  extension_manifest.hpp
libs/rook-core/include/rook/adapters/hook/: builtin_hooks.hpp  core_api_provider.hpp  hook_registry.hpp  plugin_hook_adapter.hpp  plugin_loader.hpp  rook_plugin.h
libs/rook-core/include/rook/adapters/llm/: llm_factory.hpp  llm_http_client.hpp  multi_provider_adapter.hpp  openai_compatible_adapter.hpp  threaded_adapter.hpp
libs/rook-core/include/rook/adapters/mcp/: http_sse_transport.hpp  mcp_client.hpp  mcp_client_adapter.hpp  mcp_server_manager.hpp  mcp_transport.hpp  null_tool_port.hpp  stdio_transport.hpp
libs/rook-core/include/rook/adapters/model/: model_cache.hpp  model_discovery_factory.hpp
libs/rook-core/include/rook/adapters/security/: bwrap_executor.hpp  capability.hpp  security_guarded_tool_port.hpp  security_manager.hpp
libs/rook-core/include/rook/adapters/server/: grpc_service_adapter.hpp  tenant_manager.hpp  tenant_service_adapter.hpp
libs/rook-core/include/rook/auth/: jwt.hpp
libs/rook-core/include/rook/core/: actor_messages.hpp  domain_actor.hpp  lockfree_queue.hpp  lockfree_ring_buffer.hpp  peer_manager.hpp  settings.hpp  sync_manager.hpp  worker_pool.hpp
libs/rook-core/include/rook/domain/: agent.hpp  audio_pipeline.hpp  conversation.hpp  event_bus.hpp  events.hpp
libs/rook-core/include/rook/ports/: audio_device_port.hpp  audio_port.hpp  extension_port.hpp  hook_port.hpp  llm_port.hpp  model_discovery_port.hpp  security_port.hpp  speech_to_text_port.hpp  store_port.hpp  telemetry_port.hpp  text_to_speech_port.hpp  tool_port.hpp  user_input_port.hpp  user_output_port.hpp  wakeword_port.hpp
libs/rook-core/include/rook/sync/: crdt_awset.hpp  crdt_gset.hpp  crdt_lww_map.hpp  crdt_yata.hpp  hlc.hpp  sync_engine.hpp
libs/rook-core/src/adapters/: secret_store.cpp
libs/rook-core/src/adapters/audio/: miniaudio_adapter.cpp  model_downloader.cpp  openwakeword_adapter.cpp  piper_adapter.cpp  sherpa_adapter.cpp  sherpa_asr_adapter.cpp  sherpa_tts_adapter.cpp  sherpa_wakeword_adapter.cpp  whisper_adapter.cpp
libs/rook-core/src/adapters/builtin/: builtin_tool_port.cpp
libs/rook-core/src/adapters/client/: grpc_client_extension_port.cpp  grpc_client_llm_port.cpp  grpc_client_store_port.cpp
libs/rook-core/src/adapters/composite/: composite_tool_port.cpp
libs/rook-core/src/adapters/extension/: extension_manager.cpp  extension_manifest.cpp
libs/rook-core/src/adapters/hook/: builtin_hooks.cpp  core_api_provider.cpp  hook_registry.cpp  plugin_hook_adapter.cpp  plugin_loader.cpp
libs/rook-core/src/adapters/llm/: anthropic_adapter.cpp  deepseek_adapter.cpp  llm_http_client.cpp  multi_provider_adapter.cpp  ollama_adapter.cpp  openai_adapter.cpp  openai_compatible_adapter.cpp  threaded_adapter.cpp
libs/rook-core/src/adapters/mcp/: http_sse_transport.cpp  mcp_client.cpp  mcp_client_adapter.cpp  mcp_server_manager.cpp  null_tool_port.cpp  stdio_transport.cpp
libs/rook-core/src/adapters/model/: model_cache.cpp  model_discovery.cpp
libs/rook-core/src/adapters/security/: bwrap_executor.cpp  capability.cpp  security_guarded_tool_port.cpp  security_manager.cpp
libs/rook-core/src/adapters/server/: grpc_service_adapter.cpp  tenant_manager.cpp  tenant_service_adapter.cpp
libs/rook-core/src/adapters/store/: json_store.cpp
libs/rook-core/src/auth/: jwt.cpp
libs/rook-core/src/core/: domain_actor.cpp  peer_manager.cpp  settings.cpp  sync_manager.cpp  worker_pool.cpp
libs/rook-core/src/domain/: agent.cpp  audio_pipeline.cpp  conversation.cpp  event_bus.cpp
libs/rook-core/src/ports/: provider_defaults.cpp  provider_registry.cpp
libs/rook-core/src/sync/: hlc.cpp  sync_engine.cpp
po/: POTFILES  de.po  en.po  (+2 more)
proto/: gen_proto.sh  meson.build
proto/rook/v1/: service.proto
src/rook-gui/: application.cpp  application.hpp  main.cpp  meson.build  window.cpp  window.hpp
src/rook-gui/views/: appearance_page.cpp  appearance_page.hpp  chat_sidebar.cpp  chat_sidebar.hpp  chat_view.cpp  chat_view.hpp  extension_install_dialog.cpp  extension_install_dialog.hpp  extension_settings_page.cpp  extension_settings_page.hpp  first_run_wizard.cpp  first_run_wizard.hpp  llm_settings_page.cpp  llm_settings_page.hpp  markdown_renderer.cpp  markdown_renderer.hpp  mcp_server_dialog.cpp  mcp_server_dialog.hpp  mcp_settings_page.cpp  mcp_settings_page.hpp  message_widget.cpp  message_widget.hpp  permission_banner.cpp  permission_banner.hpp  permission_port.hpp  preferences_window.cpp  preferences_window.hpp  provider_dialog.cpp  provider_dialog.hpp  server_settings_page.cpp  server_settings_page.hpp  settings_dialog.cpp  settings_dialog.hpp  skill_dialog.cpp  skill_dialog.hpp  skills_page.cpp  skills_page.hpp  tool_call_row.cpp  tool_call_row.hpp  tray_icon.cpp  (+3 more)
tests/: meson.build
tests/fixtures/plugins/: broken_hook.c  meson.build  mock_hook.c
tests/mocks/: mock_audio_ports.hpp
tests/unit/: test_audio_pipeline.cpp  test_capability.cpp  test_conversation.cpp  test_event_bus.cpp  test_extension.cpp  test_plugin_loader.cpp  test_ring_buffer.cpp  test_security_manager.cpp  test_sync.cpp
(+11 files in other folders)
